testdata/baselines/reference/submodule/compiler/jsExportAssignmentNonMutableLocation.errors.txt
file.js(4,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== file.js (1 errors) ====
    const customSymbol = Symbol("custom");
    
    // This is a common pattern in Node’s built-in modules:
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        customSymbol,
    ~~~~~~~~~~~~~~~~~
    };
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    exports.customSymbol2 = Symbol("custom");